--- a/front_end/html/AdminSiswa.html
+++ b/front_end/html/AdminSiswa.html
@@ -480,7 +480,9 @@
         const countSpan = document.getElementById("total-siswa-count");
 
         // Fetch statistik total siswa
-        fetch("http://localhost:3000/api/dashboard/admin/stats")
+        fetch(
+          "https://lmssmkn4kotser-production.up.railway.app/api/dashboard/admin/stats"
+        )
           .then((res) => res.json())
           .then((data) => {
             const totalFormatted = data.totalSiswa.toLocaleString();
@@ -495,7 +497,7 @@
 
         // Fetch dan render data siswa
         function fetchStudents(
-          url = "http://localhost:3000/api/dashboard/admin/students"
+          url = "https://lmssmkn4kotser-production.up.railway.app/api/dashboard/admin/students"
         ) {
           fetch(url)
             .then((res) => res.json())
@@ -610,7 +612,7 @@
             if (kelas) query.append("kelas", kelas);
 
             fetchStudents(
-              `http://localhost:3000/api/dashboard/admin/students/filter?${query.toString()}`
+              `https://lmssmkn4kotser-production.up.railway.app/api/dashboard/admin/students/filter?${query.toString()}`
             );
           });
 
@@ -658,7 +660,7 @@
             const keyword = this.value.trim();
             if (keyword.length >= 2) {
               fetchStudents(
-                `http://localhost:3000/api/dashboard/admin/students/search?keyword=${encodeURIComponent(
+                `https://lmssmkn4kotser-production.up.railway.app/api/dashboard/admin/students/search?keyword=${encodeURIComponent(
                   keyword
                 )}`
               );
@@ -677,7 +679,9 @@
           if (!id) return;
 
           if (viewBtn || editBtn) {
-            fetch(`http://localhost:3000/api/dashboard/admin/students/${id}`)
+            fetch(
+              `https://lmssmkn4kotser-production.up.railway.app/api/dashboard/admin/students/${id}`
+            )
               .then((res) => res.json())
               .then((data) => {
                 document.getElementById("studentId").value = data.id;
@@ -707,7 +711,7 @@
           if (deleteBtn) {
             if (confirm("Yakin ingin menghapus siswa ini?")) {
               fetch(
-                `http://localhost:3000/api/dashboard/admin/students/${id}`,
+                `https://lmssmkn4kotser-production.up.railway.app/api/dashboard/admin/students/${id}`,
                 {
                   method: "DELETE",
                 }
@@ -733,8 +737,8 @@
 
           const method = id ? "PUT" : "POST";
           const url = id
-            ? `http://localhost:3000/api/dashboard/admin/students/${id}`
-            : `http://localhost:3000/api/dashboard/admin/students`;
+            ? `https://lmssmkn4kotser-production.up.railway.app/api/dashboard/admin/students/${id}`
+            : `https://lmssmkn4kotser-production.up.railway.app/api/dashboard/admin/students`;
 
           const password =
             document.getElementById("studentPassword")?.value || "";
