--- a/front_end/html/DashboardSiswa.html
+++ b/front_end/html/DashboardSiswa.html
@@ -231,7 +231,7 @@
           if (!token) throw new Error("Token tidak ditemukan");
 
           const res = await fetch(
-            "http://localhost:3000/api/dashboard/siswa/profile",
+            "https://lmssmkn4kotser-production.up.railway.app/api/dashboard/siswa/profile",
             {
               headers: {
                 Authorization: `Bearer ${token}`,
@@ -276,7 +276,7 @@
         try {
           const token = localStorage.getItem("token");
           const res = await fetch(
-            "http://localhost:3000/api/dashboard/siswa/materi",
+            "https://lmssmkn4kotser-production.up.railway.app/api/dashboard/siswa/materi",
             {
               headers: {
                 Authorization: `Bearer ${token}`,
@@ -295,7 +295,7 @@
               <h3 class="text-lg font-bold text-gray-800 mb-2">${course.name}</h3>
               <p class="text-sm text-gray-600 mb-2">${course.description}</p>
               <p class="text-xs text-gray-500 mb-2">Dibuat oleh: ${course.guru}</p>
-              <a href="http://localhost:3000${course.file_path}" 
+              <a href="https://lmssmkn4kotser-production.up.railway.app${course.file_path}" 
                 class="inline-block mt-2 px-4 py-2 bg-indigo-600 text-white rounded-lg hover:bg-indigo-700 text-sm">
                 Lihat Materi
               </a>
