update windows href

--- a/front_end/html/GuruPengaturan.html
+++ b/front_end/html/GuruPengaturan.html
@@ -306,7 +306,8 @@
             localStorage.removeItem("token");
             localStorage.removeItem("user"); // jika ada
             // Redirect ke halaman login atau index.html
-            window.location.href = "http://127.0.0.1:5500/front_end/index.html";
+            window.location.href =
+              "https://lmssmkn4kotser-production.up.railway.app/index.html";
           }
         });
 
