--- a/front_end/html/SiswaAssisgement.html
+++ b/front_end/html/SiswaAssisgement.html
@@ -391,7 +391,9 @@
               <div class="text-sm text-gray-500">${nilai}</div>
             </td>
             <td class="p-1 whitespace-nowrap text-sm text-center">
-              <a href="${tugas.file_path}" 
+              <a href="https://lmssmkn4kotser-production.up.railway.app${
+                tugas.file_path
+              }" 
                class="text-gray-600 hover:text-gray-900" 
               target="_blank" 
               title="Lihat Tugas dari Guru">
