--- a/front_end/html/SiswaAssisgement.html
+++ b/front_end/html/SiswaAssisgement.html
@@ -283,7 +283,8 @@
           if (confirmLogout) {
             localStorage.removeItem("token");
             localStorage.removeItem("user");
-            window.location.href = "http://127.0.0.1:5500/front_end/index.html";
+            window.location.href =
+              "https://lmssmkn4kotser-production.up.railway.app/index.html/front_end/index.html";
           }
         });
       }
