--- a/front_end/html/GuruDiskusi.html
+++ b/front_end/html/GuruDiskusi.html
@@ -244,7 +244,8 @@
           if (confirm("Apakah Anda yakin ingin keluar?")) {
             localStorage.removeItem("token");
             localStorage.removeItem("user");
-            window.location.href = "http://127.0.0.1:5500/front_end/index.html";
+            window.location.href =
+              "https://lmssmkn4kotser-production.up.railway.app/index.html";
           }
         });
       }
