--- a/front_end/html/SiswaAssisgement.html
+++ b/front_end/html/SiswaAssisgement.html
@@ -447,7 +447,7 @@
 
           try {
             const res = await fetch(
-              `https://lmssmkn4kotser-production.up.railway.app/api/dashboard/siswa/tugas/${tugasId}/kumpulanTugas`,
+              `api/dashboard/siswa/tugas/${tugasId}/kumpulanTugas`,
               {
                 method: "POST",
                 headers: { Authorization: `Bearer ${token}` },
