--- a/front_end/html/SiswaAssisgement.html
+++ b/front_end/html/SiswaAssisgement.html
@@ -447,7 +447,7 @@
 
           try {
             const res = await fetch(
-              `api/dashboard/siswa/tugas/${tugasId}/kumpulanTugas`,
+              `api/dashboard/siswa/tugas/${tugasId}/uploadsss/kumpulanTugas`,
               {
                 method: "POST",
                 headers: { Authorization: `Bearer ${token}` },
