update upload jawaban

--- a/front_end/html/SiswaAssisgement.html
+++ b/front_end/html/SiswaAssisgement.html
@@ -403,7 +403,7 @@
           <td class="p-1 whitespace-nowrap text-sm text-center">
               ${
                 tugas.file_kumpul
-                  ? `<a href="https://lmssmkn4kotser-production.up.railway.app${tugas.file_kumpul}" 
+                  ? `<a href="{tugas.file_kumpul}" 
              class="text-green-600 hover:text-green-800" 
              target="_blank" 
              title="Lihat Jawaban Anda">
