--- a/front_end/html/SiswaAssisgement.html
+++ b/front_end/html/SiswaAssisgement.html
@@ -445,7 +445,7 @@
 
           try {
             const res = await fetch(
-              `http://localhost:3000/api/dashboard/siswa/tugas/${tugasId}/kumpulanTugas`,
+              `lmssmkn4kotser-production.up.railway.app/api/dashboard/siswa/tugas/${tugasId}/kumpulanTugas`,
               {
                 method: "POST",
                 headers: { Authorization: `Bearer ${token}` },
