--- a/front_end/html/SiswaAssisgement.html
+++ b/front_end/html/SiswaAssisgement.html
@@ -442,10 +442,11 @@
           const tugasId = document.getElementById("tugasId").value;
           const formData = new FormData(this);
           const token = localStorage.getItem("token");
+          const BASE_URL = "https://lmssmkn4kotser-production.up.railway.app";
 
           try {
             const res = await fetch(
-              `api/dashboard/siswa/tugas/${tugasId}/kumpulanTugas`,
+              `${BASE_URL}/api/dashboard/siswa/tugas/${tugasId}/kumpulanTugass`,
               {
                 method: "POST",
                 headers: { Authorization: `Bearer ${token}` },
