--- a/front_end/html/SiswaAssisgement.html
+++ b/front_end/html/SiswaAssisgement.html
@@ -446,7 +446,7 @@
 
           try {
             const res = await fetch(
-              `${BASE_URL}/api/dashboard/siswa/tugas/${tugasId}/kumpulanTugass`,
+              `${BASE_URL}/api/dashboard/siswa/tugas/${tugasId}/kumpulanTugas`,
               {
                 method: "POST",
                 headers: { Authorization: `Bearer ${token}` },
