--- a/front_end/html/SiswaAssisgement.html
+++ b/front_end/html/SiswaAssisgement.html
@@ -435,49 +435,6 @@
         document.getElementById("uploadModal").classList.add("hidden");
       }
 
-      document
-        .getElementById("formUploadTugas")
-        .addEventListener("submit", async function (e) {
-          e.preventDefault();
-          const BASE_URL = "https://lmssmkn4kotser-production.up.railway.app";
-          const tugasId = document.getElementById("tugasId").value;
-          const formData = new FormData(this);
-          const token = localStorage.getItem("token");
-
-          try {
-            const res = await fetch(
-              `${BASE_URL}/api/dashboard/siswa/tugas/${tugasId}/kumpulanTugas`,
-              {
-                method: "POST",
-                headers: { Authorization: `Bearer ${token}` },
-                body: formData,
-              }
-            );
-
-            const text = await res.text(); // tetap aman jika error HTML
-
-            if (!res.ok) {
-              console.error("❌ Upload error:", text);
-              alert("Gagal upload tugas:\n" + text);
-              return;
-            }
-
-            let result;
-            try {
-              result = JSON.parse(text);
-              alert("✅ Tugas berhasil dikumpulkan.");
-              tutupModal(); // tutup modal upload
-              loadTugasSiswa(); // refresh data di halaman
-            } catch (parseErr) {
-              console.error("❌ Gagal parsing respon JSON:", parseErr);
-              alert("Upload berhasil, tapi data tidak valid.");
-            }
-          } catch (err) {
-            console.error("❌ Upload gagal:", err);
-            alert("Terjadi kesalahan saat mengupload tugas.");
-          }
-        });
-
       // document
       //   .getElementById("formUploadTugas")
       //   .addEventListener("submit", async function (e) {
@@ -497,18 +454,62 @@
       //         }
       //       );
 
-      //       const result = await res.json();
-      //       if (res.ok) {
-      //         alert("Tugas berhasil dikumpulkan.");
-      //         tutupModal();
-      //         loadTugasSiswa(); // reload data
-      //       } else {
-      //         alert(result.message || "Gagal kumpulkan tugas.");
+      //       const text = await res.text(); // tetap aman jika error HTML
+
+      //       if (!res.ok) {
+      //         console.error("❌ Upload error:", text);
+      //         alert("Gagal upload tugas:\n" + text);
+      //         return;
+      //       }
+
+      //       let result;
+      //       try {
+      //         result = JSON.parse(text);
+      //         alert("✅ Tugas berhasil dikumpulkan.");
+      //         tutupModal(); // tutup modal upload
+      //         loadTugasSiswa(); // refresh data di halaman
+      //       } catch (parseErr) {
+      //         console.error("❌ Gagal parsing respon JSON:", parseErr);
+      //         alert("Upload berhasil, tapi data tidak valid.");
       //       }
       //     } catch (err) {
-      //       console.error("Upload gagal:", err);
+      //       console.error("❌ Upload gagal:", err);
+      //       alert("Terjadi kesalahan saat mengupload tugas.");
       //     }
       //   });
+
+      document
+        .getElementById("formUploadTugas")
+        .addEventListener("submit", async function (e) {
+          e.preventDefault();
+          const BASE_URL = "https://lmssmkn4kotser-production.up.railway.app";
+          const tugasId = document.getElementById("tugasId").value;
+          const formData = new FormData(this);
+          const token = localStorage.getItem("token");
+
+          try {
+            const res = await fetch(
+              `${BASE_URL}/api/dashboard/siswa/tugas/${tugasId}/kumpulanTugas`,
+              {
+                method: "POST",
+                headers: { Authorization: `Bearer ${token}` },
+                body: formData,
+              }
+            );
+
+            const result = await res.json();
+            if (res.ok) {
+              alert("Tugas berhasil dikumpulkan.");
+              tutupModal();
+              loadTugasSiswa(); // reload data
+            } else {
+              alert(result.message || "Gagal kumpulkan tugas.");
+            }
+          } catch (err) {
+            console.error("Upload gagal:", err);
+          }
+        });
+
       async function loadAssignmentStats() {
         try {
           const token = localStorage.getItem("token");
