--- a/front_end/html/DashboardSiswa.html
+++ b/front_end/html/DashboardSiswa.html
@@ -146,7 +146,7 @@
         <!-- Courses Section -->
         <section class="mb-10">
           <div
-            id="courseContainer"
+            id="materiList"
             class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"
           ></div>
         </section>
