--- a/front_end/html/DashboardSiswa.html
+++ b/front_end/html/DashboardSiswa.html
@@ -296,7 +296,7 @@
               <h3 class="text-lg font-bold text-gray-800 mb-2">${course.name}</h3>
               <p class="text-sm text-gray-600 mb-2">${course.description}</p>
               <p class="text-xs text-gray-500 mb-2">Dibuat oleh: ${course.guru}</p>
-              <a href="hp${course.file_path}" 
+              <a href="${course.file_path}" 
                 class="inline-block mt-2 px-4 py-2 bg-indigo-600 text-white rounded-lg hover:bg-indigo-700 text-sm">
                 Lihat Materi
               </a>
